--- a/ant/project.properties
+++ b/ant/project.properties
@@ -19,7 +19,7 @@ out.dir=${basedir}/out
 build.dir=${out.dir}/build
 build.project.dir=${build.dir}/${project.filename}
 branding.dir=${asset.dir}/branding
-sign.lib.dir=${out.dir}/jar-presign
+sign.lib.dir=${out.dir}/jar-signed
 
 dist.dir=${out.dir}/dist
 dist.jar=${dist.dir}/${project.filename}.jar
