--- a/build.xml
+++ b/build.xml
@@ -378,6 +378,18 @@
     <target name="codesign" depends="init" if="os.mac">
         <property file="ant/apple/apple.properties"/>
 
+        <exec executable="security">
+            <arg value="add-certificates"/>
+            <arg value="${apple.packager.cert}"/>
+        </exec>
+        <exec executable="security">
+            <arg value="add-certificates"/>
+            <arg value="${apple.codesign.cert}"/>
+        </exec>
+        <exec executable="security">
+            <arg value="add-certificates"/>
+            <arg value="${apple.intermediate.cert}"/>
+        </exec>
         <antcall target="codesign-libs">
             <param name="signing.jarname" value="communication/jna-*.jar"/>
             <param name="signing.excluded" value="communication/jna-platform-*.jar"/>
