Attempt to fix Travis

--- a/build.xml
+++ b/build.xml
@@ -391,7 +391,7 @@
         <antcall target="codesign-libs">
             <param name="signing.jarname" value="communication/jssc-*.jar"/>
             <param name="signing.filetype" value="*.jnilib"/>
-            <!-- for signing.delete to be effective, the unsigned lib(s) must be added to jar exclusion -->
+            <!-- for signing.delete to be effective, the unsigned lib must be added to jar zipgroupfileset exclusion -->
             <param name="signing.delete" value="*_ppc*.jnilib"/>
         </antcall>
         <antcall target="codesign-libs">
@@ -408,7 +408,7 @@
         </antcall>
     </target>
 
-    <target name="codesign-libs">
+    <target name="codesign-libs" if="signing.tsaurl">
         <path id="find.jar">
             <fileset dir="${lib.dir}">
                 <include name="**/${signing.jarname}"/>
