Fix more access violations

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -34,7 +34,7 @@ jar.index=true
 javac.source=1.7
 javac.target=1.7
 javafx.version=11.0.2
-javafx.mirror=http://gluonhq.com/download
+javafx.mirror=https://gluonhq.com/download
 
 manifest.application.name=${project.name}
 manifest.main.class=qz.ws.PrintSocketServer
