--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /out/
 /js/node_modules
+/lib/javafx*
 /.idea/workspace.xml
 /.idea/uiDesigner.xml
 /.idea/compiler.xml
+/fx.zip
 /README.md
 .DS_Store
