--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="qz" default="distribute" basedir=".">
 
-    <target name="distribute" depends="init,clean,sign-jar,override-authcert,include-assets">
+    <target name="distribute" depends="init,clean,sign-jar,copy-native,override-authcert,include-assets">
         <echo message="Process complete" />
     </target>
 
@@ -152,6 +152,76 @@
             ]]>
         </script>
         <echo>Size: ${build.size} KB</echo>
+    </target>
+
+    <!-- Download JavaFX if needed -->
+    <target name="check-javafx">
+        <property file="ant/project.properties"/>
+        <loadresource property="javafx.version-url">
+            <propertyresource name="javafx.version"/>
+            <filterchain>
+                <tokenfilter>
+                    <filetokenizer/>
+                    <replacestring from="." to="-"/>
+                </tokenfilter>
+            </filterchain>
+        </loadresource>
+
+        <first id="found">
+            <dirset dir="lib/">
+                <include name="javafx*${javafx.version}"/>
+                <include name="javafx*${javafx.version-url}"/>
+            </dirset>
+        </first>
+        <condition property="javafx.needed" value="${toString:found}">
+            <equals arg1="${toString:found}" arg2=""/>
+        </condition>
+        <property name="javafx.found" value="${toString:found}"/>
+    </target>
+
+    <target name="skip-javafx" depends="check-javafx" unless="javafx.needed">
+        <echo level="info">JavaFX ${javafx.version} found at ${javafx.found}.  Skipping.</echo>
+    </target>
+
+    <target name="download-javafx" depends="check-javafx,skip-javafx" if="javafx.needed">
+        <echo level="info">JavaFX ${javafx.version} was not found, downloading...</echo>
+
+        <echo level="info">Removing any old versions</echo>
+        <delete failonerror="false" includeemptydirs="true" verbose="true">
+            <fileset dir="lib/">
+                <include name="**/*javafx*sdk*/**"/>
+            </fileset>
+        </delete>
+
+        <condition property="javafx.platform" value="windows">
+            <os family="windows"/>
+        </condition>
+        <condition property="javafx.platform" value="mac">
+            <os family="mac"/>
+        </condition>
+        <condition property="javafx.platform" value="linux">
+            <os family="unix"/>
+        </condition>
+        <get src="${javafx.mirror}/javafx-${javafx.version-url}-sdk-${javafx.platform}/" verbose="true" dest="fx.zip"/>
+
+        <unzip src="fx.zip" dest="lib/" overwrite="true"/>
+        <delete file="fx.zip" />
+    </target>
+
+    <target name="copy-native" depends="download-javafx">
+        <condition property="native.extension" value="*.dll">
+            <os family="windows"/>
+        </condition>
+        <condition property="native.extension" value="*.dylib">
+            <os family="mac"/>
+        </condition>
+        <condition property="native.extension" value="*.so">
+            <os family="unix"/>
+        </condition>
+        <!-- Copy JavaFX native libs -->
+        <copy todir="${dist.dir}/libs" flatten="true">
+            <fileset dir="lib/" includes ="javafx*/**/${native.extension}"/>
+        </copy>
     </target>
 
     <target name="internal-authcert" unless="authcert.use">
@@ -384,7 +454,7 @@
         <delete file="${dist.dir}/${apple.plist.out}" />
     </target>
 
-    <target name="codesign" depends="init,prepackage" if="codesign.mac">
+    <target name="codesign" depends="init,copy-native,prepackage" if="codesign.mac">
         <property file="ant/apple/apple.properties"/>
         <exec executable="security">
             <arg value="add-certificates"/>
@@ -415,6 +485,14 @@
             <param name="signing.jarname" value="communication/libusb4java-*-osx-x86_64.jar"/>
             <param name="signing.filetype" value="*.dylib"/>
         </antcall>
+        <!-- Manually sign standalone libs -->
+        <!--use xargs to loop over and codesign all files-->
+        <echo message="Signing ${dist.dir}/libs/*.dylib using ${apple.packager.signid}"/>
+        <exec executable="bash" failonerror="true">
+            <arg value="-c"/>
+            <arg value="echo &quot;$(find ${dist.dir}/libs/*.dylib)&quot; |tr ':' '\n' |xargs codesign -s &quot;${apple.packager.signid}&quot; -v"/>
+        </exec>
+
     </target>
 
     <target name="codesign-libs">
