Adds JDK11 detection on Windows Closes #416

--- a/ant/windows/windows-launcher.nsi.in
+++ b/ant/windows/windows-launcher.nsi.in
@@ -86,6 +86,22 @@ Function FindJRE
   StrCpy $R0 "$R0\bin\javaw.exe"
   IfErrors 0 JreFound
   ${EndIf}
+
+  ; Look again, but for JDK
+  ClearErrors
+  ReadRegStr $R1 HKLM "Software\JavaSoft\JDK" "CurrentVersion"
+  ReadRegStr $R0 HKLM "Software\JavaSoft\JDK\$R1" "JavaHome"
+  StrCpy $R0 "$R0\bin\javaw.exe"
+  IfErrors 0 JreFound
+
+  ; Fall-back to 32-bit registry
+  ${If} ${RunningX64}
+  ClearErrors
+  ReadRegStr $R1 HKLM "Software\Wow6432Node\JavaSoft\JDK" "CurrentVersion"
+  ReadRegStr $R0 HKLM "Software\Wow6432Node\JavaSoft\JDK\$R1" "JavaHome"
+  StrCpy $R0 "$R0\bin\javaw.exe"
+  IfErrors 0 JreFound
+  ${EndIf}
   
   ; Give up.  Use javaw.exe and hope it works
   StrCpy $R0 "javaw.exe"
