Update download links for AdoptOpenJDK11

--- a/ant/apple/apple-preinstall.sh.in
+++ b/ant/apple/apple-preinstall.sh.in
@@ -22,7 +22,7 @@ function check_java() {
 	if [ $(echo "$curver>=$minver" | bc -l) -eq 0 ]; then
 		osascript -e "tell app \"Installer\" to display dialog \"Java $minver is required for installation.\nDownload it now?\""
 		if [ $? -eq 0 ]; then
-			open "https://java.com/download/"
+			open "${java.download}"
 		fi
 		exit 1
 	fi
