--- a/ant/project.properties
+++ b/ant/project.properties
@@ -37,6 +37,7 @@ javac.source=1.8
 javac.target=1.8
 javafx.version=11.0.2
 javafx.mirror=https://gluonhq.com/download
+java.download=https://adoptopenjdk.net/?variant=openjdk11
 
 manifest.application.name=${project.name}
 manifest.main.class=qz.ws.PrintSocketServer
