Fix inflated macOS installers; add setExecutable() helper

--- a/ant/apple/apple-preinstall.sh.in
+++ b/ant/apple/apple-preinstall.sh.in
@@ -5,6 +5,6 @@ set -e
 
 # Get working directory
 DIR=$(cd "$(dirname "$0")" && pwd)
-pushd "$DIR"
+pushd "$DIR/payload/Contents/MacOS/"
 
-./"${project.filename}" preinstall
+./"${project.name}" preinstall
