--- a/ant/apple/apple-postinstall.sh.in
+++ b/ant/apple/apple-postinstall.sh.in
@@ -3,6 +3,13 @@
 # Halt on first error
 set -e
 
+# Get working directory
+DIR=$(cd "$(dirname "$0")" && pwd)
+pushd "$DIR/payload/Contents/MacOS/"
+
+./"${project.name}" install
+popd
+
 # Use install target from pkgbuild, an undocumented feature; fallback on sane location
 if [ -n "$2" ]; then
     pushd "$2/Contents/MacOS/"
@@ -10,7 +17,6 @@ else
     pushd "/Applications/${project.name}.app/Contents/MacOS/"
 fi
 
-./"${project.name}" install
 ./"${project.name}" certgen
 
 # Start qz by calling open on the .app as an ordinary user
